2000-12-25  Lauris Kaplinski  <lauris@helixcode.com>

	* src/display/nr-primitives.h: Move NRCoord and NRPoint here
	* src/display/nr-primitives.c: NRDRect methods

	* src/display/nr-svp.*: Rewrite. NRSVP is now simple ordered
	segment and we use linked (sorted) lists for describing more
	complex geometries
	* src/display/nr-svp-uncross.*: Ditto, partial implementation
	* src/display/nr-svp-render.* Ditto. Works.

2000-12-21  Lauris Kaplinski  <lauris@helixcode.com>

	* src/display/nr-svp-render.c: Lot's of cleanup

2000-12-20  Lauris Kaplinski  <lauris@helixcode.com>

	* src/display/nr-svp-render.c (nr_svp_render_rgb_rgba): It
	works to some extent!
	* src/display/canvas-shape.c (sp-canvas_shape_render): Use New
	Rendering, #ifdef NEW_RENDER

	* src/display/testnr.c: Silly file

2000-12-19  Lauris Kaplinski  <lauris@helixcode.com>

	* src/display/nr-uta.*: UTA Implementation

	* src/display/nr-aa-canvas.*: RGB Buffer canvas

	* src/display/sp-arena.*: Widget, using RGB canvas

	* src/display/sp-canvas-item.*: Item subclass for arena
	* src/display/sp-canvas-group.*: Ditto

2000-12-17  Lauris Kaplinski  <lauris@helixcode.com>

	* src/display/nr-primitves.h: typedef NRPoint

	* src/display/nr-canvas.*: More code
	* src/display/nr-canvas-item.*: Ditto
	* src/display/nr-canvas-group.*: Ditto

2000-12-16  Lauris Kaplinski  <lauris@helixcode.com>

	* src/display/nr-canvas-group.*: Base class for canvas groups
	* src/display/nr-primitives.*: Graphic primitives

2000-12-15  Lauris Kaplinski  <lauris@helixcode.com>

	* src/display/nr-canvas.*: Experimental new rendering stuff (not working)
	* src/display/nr-canvas-item.*: Ditto (not working)
	* src/display/nr-svp.*: Ditto (works)
	* src/display/nr-svp-uncross.*: Ditto (works)
	* src/display/nr-svp-render.*: Not working yet

	* configure.in: Added {with|without}-new-render switch

2000-11-30  Szabolcs Ban  <shooby@gnome.hu>

	* glade/toolbox.c: corrected "zom factor" to "zoom factor"
